@@ -15,6 +15,7 @@
 //------------------------------------------------------------------------------
 // global variable access
 //------------------------------------------------------------------------------
+// TODO this is not thread-safe
 
 // a global variable, but only accessible within this file.
 extern bool spex_initialize_has_been_called ;
